--- a/Automated_speech_recognition_googlenet_2_increased_dropout.ipynb
+++ b/Automated_speech_recognition_googlenet_2_increased_dropout.ipynb
@@ -351,6 +351,66 @@
         "  x = inception_module(x, 112, 144, 288, 32, 64, 64)\n",
         "  x = inception_module(x, 256, 160, 320, 32, 128, 128)\n",
         "  x = MaxPooling2D((3, 3), strides=(2, 2), padding='same')(x)\n",
+        "\n",
+        "  x = inception_module(x, 256, 160, 320, 32, 128, 128)\n",
+        "  x = inception_module(x, 384, 192, 384, 48, 128, 128)\n",
+        "\n",
+        "  x = AveragePooling2D((4, 2), strides=(1, 1), padding='valid')(x)  # Adjusted pool size to fit input shape (98, 50, 1)\n",
+        "  x = Dropout(0.4)(x)\n",
+        "\n",
+        "  x = Flatten()(x)\n",
+        "  x = Dense(num_classes, activation='linear')(x)\n",
+        "  outputs = Softmax()(x)\n",
+        "\n",
+        "  # Create and compile the model\n",
+        "  model = Model(inputs=inputs, outputs=outputs)\n",
+        "  opt = tf.keras.optimizers.Adam(learning_rate=0.0005)\n",
+        "  model.compile(optimizer=opt, loss='categorical_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "  return model"
+      ],
+      "metadata": {
+        "id": "ko4WkNfG5__e"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Create Modified Googlenet Model"
+      ],
+      "metadata": {
+        "id": "ziOT7_61DO8d"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from keras.layers import AveragePooling2D\n",
+        "\n",
+        "def create_googlenet_modified(input_shape, num_classes=12):\n",
+        "  inputs = Input(shape=input_shape)\n",
+        "\n",
+        "  x = Conv2D(64, (7, 7), strides=(2, 2), padding='same', activation='relu')(inputs)\n",
+        "  x = MaxPooling2D((3, 3), strides=(2, 2), padding='same')(x)\n",
+        "  x = BatchNormalization()(x)\n",
+        "\n",
+        "  x = Conv2D(64, (1, 1), padding='same', activation='relu')(x)\n",
+        "  x = Conv2D(192, (3, 3), padding='same', activation='relu')(x)\n",
+        "  x = BatchNormalization()(x)\n",
+        "  x = MaxPooling2D((3, 3), strides=(2, 2), padding='same')(x)\n",
+        "\n",
+        "  x = inception_module(x, 64, 96, 128, 16, 32, 32)\n",
+        "  x = inception_module(x, 128, 128, 192, 32, 96, 64)\n",
+        "  x = MaxPooling2D((3, 3), strides=(2, 2), padding='same')(x)\n",
+        "\n",
+        "  x = inception_module(x, 192, 96, 208, 16, 48, 64)\n",
+        "  x = inception_module(x, 160, 112, 224, 24, 64, 64)\n",
+        "  x = inception_module(x, 128, 128, 256, 24, 64, 64)\n",
+        "  x = inception_module(x, 112, 144, 288, 32, 64, 64)\n",
+        "  x = inception_module(x, 256, 160, 320, 32, 128, 128)\n",
+        "  x = MaxPooling2D((3, 3), strides=(2, 2), padding='same')(x)\n",
         "  x = Dropout(0.2)(x)\n",
         "\n",
         "  x = inception_module(x, 256, 160, 320, 32, 128, 128)\n",
@@ -372,9 +432,9 @@
         "  return model"
       ],
       "metadata": {
-        "id": "ko4WkNfG5__e"
+        "id": "EzKgL3yDDO8f"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -900,7 +960,7 @@
       "source": [
         "input_shape = (98,50,1)\n",
         "  \n",
-        "model = create_googlenet(input_shape, num_classes)\n",
+        "model = create_googlenet_modified(input_shape, num_classes)\n",
         "model.summary()"
       ],
       "metadata": {
